[metadata]
name = sss
description = "SKT Steps to Squad"
long_description = file: README.md
version = 1
author = Red Hat, Inc.
license = GPLv2+
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GPLv2+
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# Automatically find all files beneath the sss directory and include them.
packages = find:
# Parse the MANIFEST.in file and include those files, too.
include_package_data = True
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
test_suite = tests
install_requires = requests
                   xmltodict
                   python-dateutil
                   python-jenkins
                   pickledb
tests_require = mock

[options.extras_require]
# NOTE(mhayden): pycodestyle 2.4.0 has a bug that causes flake8 to fail.
# Remove the pycodestyle constraint once upstream is fixed.
dev = flake8
      pycodestyle!=2.4.0
      pylint

[options.entry_points]
# Set up an executable 'sss' that calls the main() function in
# skt/main.py.
console_scripts =
    sss = sss:main
    sss_jenkins = sss:process_jenkins_jobs

[options.packages.find]
# Don't include the /tests directory when we search for python files.
exclude =
    tests
